--- a/lectures.html
+++ b/lectures.html
@@ -19,7 +19,12 @@
 
 <!-- Lecture content goes here -->
 <div class="welcome-message" id="lecture">
-    <p>Lectures will be released on the course day</p>
+  <p>Lectures will be released on the course day</p>
+  <div>
+    <ul class="morespace">
+      <li> <a href="publish/Day_1_slides.pdf" target="_blank">Day_1_slides.pdf</a> </li>
+    </ul>
+  </div>
 </div>
 
 </body>
