--- a/lectures/Day_5.slides.embedded.html
+++ b/lectures/Day_5.slides.embedded.html
@@ -17452,8 +17452,7 @@ File <span class="ansi-green-fg">~/anaconda3/envs/python-workshop/lib/python3.9/
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="AI-can-program-when-instructed-with-natural-language">AI can program when instructed with natural language<a class="anchor-link" href="#AI-can-program-when-instructed-with-natural-language">¶</a></h2><h4 id="Task:">Task:<a class="anchor-link" href="#Task:">¶</a></h4><p>I have a sequence file in fasta format, write a Python script that can take the sequence as an argument from the command line and print the result in the following format</p>
-<p>seqid seqlength</p>
+<h2 id="AI-can-program-when-instructed-with-natural-language">AI can program when instructed with natural language<a class="anchor-link" href="#AI-can-program-when-instructed-with-natural-language">¶</a></h2><h4 id="Task:">Task:<a class="anchor-link" href="#Task:">¶</a></h4><p>Write a Python script that calculate sequence length given a fasta file</p>
 <h4 id="input-the-above-instruction-to-both-WenXinYiYan-and-ChatGPT.">input the above instruction to both WenXinYiYan and ChatGPT.<a class="anchor-link" href="#input-the-above-instruction-to-both-WenXinYiYan-and-ChatGPT.">¶</a></h4>
 </div>
 </div>
@@ -17465,7 +17464,21 @@ File <span class="ansi-green-fg">~/anaconda3/envs/python-workshop/lib/python3.9/
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="For-more-complicated-tasks,-AI-may-not-work-as-expected">For more complicated tasks, AI may not work as expected<a class="anchor-link" href="#For-more-complicated-tasks,-AI-may-not-work-as-expected">¶</a></h3>
+<h2 id="Rephrase-the-prompt-run-again">Rephrase the prompt run again<a class="anchor-link" href="#Rephrase-the-prompt-run-again">¶</a></h2><p>I have a sequence file in fasta format. The file may contain multiple sequences. Write a Python script that can take the sequence as an argument from the command line and print the result in the following format</p>
+<p>seqid seqlength</p>
+</div>
+</div>
+</div>
+</div></section></section><section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h2 id="For-more-complicated-tasks,-AI-may-not-work-as-expected">For more complicated tasks, AI may not work as expected<a class="anchor-link" href="#For-more-complicated-tasks,-AI-may-not-work-as-expected">¶</a></h2><h3 id="Task:">Task:<a class="anchor-link" href="#Task:">¶</a></h3><p>I have sequenced the whole genome of a patient using Illumina. The raw data are in these fastq files. 
+Write python script to assemble these into a whole genome and annotate it.
+also find all biomarkers that are related to type 2 diabetes.</p>
 </div>
 </div>
 </div>
@@ -17646,10 +17659,10 @@ File <span class="ansi-green-fg">~/anaconda3/envs/python-workshop/lib/python3.9/
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<ul>
-<li>With the emergence of AI chatbot like ChatGPT, the effort to memorize the usage of numerous modules and methods is meaningless, unless efficiency is the main target of your programming.</li>
-<li>Instead, the ability to raise the question and suggest steps to solve the question is more important.</li>
-<li>It is important to build a broad domain knowledge to effectively instruct and leverage AI tools.</li>
+<h3 id="Learning-programming-in-the-post-AI-era">Learning programming in the post-AI era<a class="anchor-link" href="#Learning-programming-in-the-post-AI-era">¶</a></h3><ul>
+<li><strong>AI Chatbots</strong>: Memorizing numerous modules and methods is less important unless efficiency is key.</li>
+<li><strong>Critical Thinking</strong>: Prioritize raising questions and suggesting solutions.</li>
+<li><strong>Domain Knowledge</strong>: Essential for effectively instructing and leveraging AI tools.</li>
 </ul>
 </div>
 </div>
