--- a/quiz.html
+++ b/quiz.html
@@ -19,7 +19,12 @@
 
 <!-- Lecture content goes here -->
 <div class="welcome-message" id="quiz">
-    <p>Quiz will be released on the course day</p>
+  <p>Quiz will be released on the course day</p>
+  <div>
+    <ul class="morespace">
+      <li> <a href="https://forms.office.com/r/1LKRaCrD0d" target="_blank">Quiz for Day 1</a> </li>
+    </ul>
+  </div>
 </div>
 
 </body>
