--- a/lectures.html
+++ b/lectures.html
@@ -22,7 +22,7 @@
   <p>Lectures will be released on the course day</p>
   <div>
     <ul class="morespace">
-      <li> <a href="publish/Day_1_slides.pdf" target="_blank">Day_1_slides.pdf</a> </li>
+      <li> <a href="publish/Day_1.slides.embedded.html" target="_blank">Day_1.slides.embedded.html</a> </li>
     </ul>
   </div>
 </div>
