--- a/lectures/Day_2.slides.html
+++ b/lectures/Day_2.slides.html
@@ -15948,31 +15948,21 @@ GCTTAGCTAGCTAGCTAGCTTAGCTA
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Project-background">Project background<a class="anchor-link" href="#Project-background">&#182;</a></h2><p>Whole genome sequencing in the clinic</p>
-<ul>
-<li>Europe 1+MG project</li>
-<li>Sequencing costs low</li>
-<li>Screening for mutations causing diseases from whole genome sequencing data</li>
-</ul>
-<p>Image: cost per genome</p>
-
+<h3 id="Background">Background<a class="anchor-link" href="#Background">&#182;</a></h3><div style="overflow: auto;">
+    <div style="float: left; margin-left: 20px; margin-top: 40px;">
+        <img src="img/cystic_fibrosis.png" alt="cystic fibrosis" style="width: 500px;"/>
+        <p style="font-size: 12px;">source: mayoclinic.org</p>
+    </div>
+    <div style="font-size: 30px; float: right; margin-left: 0px; margin-top: 0px; max-width: 50%;">
+        <h3>Cystic fibrosis (CF)</h3>
+        <ul>
+            <li>Genetic inherited disease</li>
+            <li>Produces thick and sticky mucus in organs, including lungs and the pancreas</li>
+            <li>Clogs the airways of patients and makes them difficult to breathe</li>
+            <li>No cure available but only symptom management, such as airway clearance</li>
+        </ul>
+    </div>
 </div>
-</div>
-</div>
-</div></section></section><section><section>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Cystic-fibrosis-(CF)">Cystic fibrosis (CF)<a class="anchor-link" href="#Cystic-fibrosis-(CF)">&#182;</a></h2><ul>
-<li>Hereditary disease</li>
-<li>Affects lungs and digestive system</li>
-<li>Production of thick and sticky mucus </li>
-<li>No cure but symptom management</li>
-</ul>
-
 </div>
 </div>
 </div>
@@ -15984,13 +15974,31 @@ GCTTAGCTAGCTAGCTAGCTTAGCTA
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h2 id="Genomic-facts-of-Cystic-Fibrosis">Genomic facts of Cystic Fibrosis<a class="anchor-link" href="#Genomic-facts-of-Cystic-Fibrosis">&#182;</a></h2><ul>
-<li>Cystic Fibrosis Transmembrane Conductance Regulator (CFTR)</li>
-<li>Ion channel protein, acting in epithelial cells</li>
-<li>CFTR gene located on chromosome 7 of the human genome</li>
-<li>Over 1,500 mutations known to cause CF</li>
-<li>Non-synonymous (amino acid changing) mutations premature stop codons</li>
+<li>CF is caused by mutations in Cystic Fibrosis Transmembrane Conductance Regulator (CFTR)</li>
+<li>The CFTR protein is an ion channel protein, acting like gates in a cell membrane that control the traffic of molecules through the membrane</li>
+<li>For normal people, CFTR makes a gate for chloride ions. When chloride moves out of the cell, taking water with it, and thus thins mucus</li>
+<li>For CF patients, gene mutations in CFTR prevent this functionality, causing the mucus stays sticky and thick
+<img src="img/CFTR.jpg" alt="cystic fibrosis" style="width: 300px;"/><p style="font-size: 12px;">source: cff.org</p></li>
 </ul>
-<p>Include an image of the protein</p>
+
+</div>
+</div>
+</div>
+</div></section></section><section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h2 id="More-about-the-CFTR-gene">More about the CFTR gene<a class="anchor-link" href="#More-about-the-CFTR-gene">&#182;</a></h2><ul>
+<li>CFTR gene is located on chromosome 7 of the human genome</li>
+<li>Over 1,500 mutations known to cause CF</li>
+<li>One type of mutations<ul>
+<li>Non-synonymous (with amino acid changing) mutations that generate a premature termination codon (PTC), that further leads to a truncated CFTR protein (shortened length).</li>
+</ul>
+</li>
+</ul>
 
 </div>
 </div>
