--- a/lectures.html
+++ b/lectures.html
@@ -23,6 +23,8 @@
   <div>
     <ul class="morespace">
       <li> <a href="publish/Day_1.slides.embedded.html" target="_blank">Day_1.slides.html</a> </li>
+      <li> <a href="publish/Day_2.slides.embedded.html" target="_blank">Day_2.slides.html</a> </li>
+      <li> <a href="publish/Day_3.slides.embedded.html" target="_blank">Day_3.slides.html</a> </li>
     </ul>
   </div>
 </div>
