--- a/exercises.html
+++ b/exercises.html
@@ -29,6 +29,19 @@
       <li> <a href="publish/Day_1_Exercise_3.html" target="_blank">Day_1_Exercise_3.html</a> </li>
       <li> <a href="publish/Day_1_Exercise_4.html" target="_blank">Day_1_Exercise_4.html</a> </li>
     </ul>
+
+    <h2>Day 2:</h2>
+    <ul>
+      <li> <a href="publish/Day_2_Exercise_1.html" target="_blank">Day_2_Exercise_1.html</a> </li>
+      <li> <a href="publish/Day_2_Exercise_2.html" target="_blank">Day_2_Exercise_2.html</a> </li>
+    </ul>
+
+    <h2>Day 3:</h2>
+    <ul>
+      <li> <a href="publish/Day_3_Exercise_1.html" target="_blank">Day_3_Exercise_1.html</a> </li>
+      <li> <a href="publish/Day_3_Exercise_2.html" target="_blank">Day_3_Exercise_2.html</a> </li>
+    </ul>
+
   </div>
 </div>
 
