--- a/quiz.html
+++ b/quiz.html
@@ -23,6 +23,8 @@
   <div>
     <ul class="morespace">
       <li> <a href="https://forms.office.com/r/1LKRaCrD0d" target="_blank">Quiz for Day 1</a> </li>
+      <li> <a href="https://forms.office.com/r/dm4rBq7bR1" target="_blank">Quiz for Day 2</a> </li>
+      <li> <a href="https://forms.office.com/r/yEbfym4Sry" target="_blank">Quiz for Day 3</a> </li>
     </ul>
   </div>
 </div>
