--- a/exercises.html
+++ b/exercises.html
@@ -42,6 +42,12 @@
       <li> <a href="publish/Day_3_Exercise_2.html" target="_blank">Day_3_Exercise_2.html</a> </li>
     </ul>
 
+    <h2>Day 4:</h2>
+    <ul>
+      <li> <a href="publish/Day_4_Exercise_1.html" target="_blank">Day_4_Exercise_1.html</a> </li>
+      <li> <a href="publish/Day_4_Exercise_2.html" target="_blank">Day_4_Exercise_2.html</a> </li>
+    </ul>
+
   </div>
 </div>
 
