--- a/lectures.html
+++ b/lectures.html
@@ -26,6 +26,7 @@
       <li> <a href="publish/Day_2.slides.embedded.html" target="_blank">Day_2.slides.html</a> </li>
       <li> <a href="publish/Day_3.slides.embedded.html" target="_blank">Day_3.slides.html</a> </li>
       <li> <a href="publish/Day_4.slides.embedded.html" target="_blank">Day_4.slides.html</a> </li>
+      <li> <a href="publish/Day_5.slides.embedded.html" target="_blank">Day_5.slides.html</a> </li>
     </ul>
   </div>
 </div>
