--- a/exercises.html
+++ b/exercises.html
@@ -51,8 +51,9 @@
     <h2>Day 5:</h2>
     <ul>
       <li> <a href="publish/Day_5_Exercise_1.html" target="_blank">Day_5_Exercise_1.html</a> </li>
-    </ul>
+    <li><a href="http://python-bioinfo.bioshu.se/lectures/student_survey.xlsx">student_survey.xlsx</a></li>
 
+    </ul>
 
   </div>
 </div>
